--- a/backends/example.env
+++ b/backends/example.env
@@ -1,4 +1,5 @@
-POSTGRES_USER=postgres
+POSTGRES_USERNAME=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=todos
+POSTGRES_HOST=database
 JWT_SECRET=supersecret
