work a bit on swagger docs

--- a/backends/Makefile
+++ b/backends/Makefile
@@ -1,5 +1,11 @@
 build:
+	go generate ./...
 	go build -o bin/apiserver cmd/api/main.go
+
+dev:
+	go generate ./...
+	go build -o bin/apiserver cmd/api/main.go
+	./bin/apiserver -config .env -migrations true
 
 compose:
 	docker-compose build && docker-compose up
