--- a/backends/docker-compose.yaml
+++ b/backends/docker-compose.yaml
@@ -3,8 +3,7 @@ services:
   database:
     image: postgres
     restart: always
-    env_file:
-      - .env
+    env_file: .env
     ports:
       - "5432:5432"
     volumes:
@@ -14,6 +13,7 @@ services:
       context: .
       dockerfile: Dockerfile
     env_file: .env
+    command: -config .env -migrations true
     depends_on:
       - database
     networks:
