--- a/backends/Dockerfile
+++ b/backends/Dockerfile
@@ -2,6 +2,10 @@ FROM golang:alpine
 
 WORKDIR /app
 
+COPY go.mod ./
+
+RUN go mod download
+
 COPY ./ ./
 
 RUN go build -o apiserver cmd/api/main.go
